--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,9 @@
-body {
+html {
   font-size: 14px;
+
+}
+
+body {
   font-family: "Open Sans", sans-serif;
   width: 100%;
   color: black;
@@ -38,19 +42,39 @@ h3 {
 /* NOTE: Jumbotron */
 
 .jumbotron-fluid {
-  background-image: url('../../resources/images/jumbotron-bike.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   color: white;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-  width: auto;
+}
+
+.jumbotron-bike {
+  background-image: url('../../resources/images/jumbotron-bike.jpg');
+}
+
+.jumbotron-beer {
+  background-image: url('../../resources/images/jumbotron-beer.jpg');
+}
+
+.jumbotron-flowers {
+  background-image: url('../../resources/images/jumbotron-flowers.jpg');
+}
+
+.jumbotron-duffel {
+  background-image: url('../../resources/images/jumbotron-duffel.jpg');
 }
 
 .jumbotron-fluid .container-fluid {
   text-align: center;
-  max-width: 51.3rem;
   padding: 11.85rem 0;
+  width: auto;
+  height: 44rem;
+}
+
+.jumbotron-fluid .container-fluid p {
+  max-width: 51.3rem;
+  margin: auto;
 }
 
 .jumbotron-fluid .container-fluid h1 {
@@ -93,7 +117,18 @@ h3 {
   opacity: 0.7;
   width: 100%;
   height: auto;
+  transition: transform .5s, opacity .5s;
 }
+
+.image-container img:hover {
+  opacity: 1;
+  transform: scale(1.3);
+}
+
+.image-container {
+  overflow: hidden;
+}
+
 
 #featured ul li {
   line-height: 1.4;
@@ -105,7 +140,8 @@ h3#categories {
 }
 
 /* NOTE: projects */
- #projects {
+
+ .project {
    margin-bottom: 5.85rem;
  }
 
