--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,11 +9,6 @@ body {
   color: black;
 }
 
-main {
-  position: relative;
-  top: 50px;
-
-}
 
 h2 {
   font-size: 1.7rem;
@@ -42,9 +37,12 @@ h3 {
 /* NOTE: Jumbotron */
 
 .jumbotron-fluid {
+  padding-top: 10rem;
+  height: 44rem;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  text-align: center;
   color: white;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
@@ -65,12 +63,6 @@ h3 {
   background-image: url('../../resources/images/jumbotron-duffel.jpg');
 }
 
-.jumbotron-fluid .container-fluid {
-  text-align: center;
-  padding: 11.85rem 0;
-  width: auto;
-  height: 44rem;
-}
 
 .jumbotron-fluid .container-fluid p {
   max-width: 51.3rem;
@@ -78,11 +70,11 @@ h3 {
 }
 
 .jumbotron-fluid .container-fluid h1 {
-  font-family: Monoton;
+  font-family: "Monoton", sans-serif;
   font-size: 7.1rem;
 }
 
-.jumbotron-fluid .container-fluid .btn {
+.btn {
   background-color: #399bd1;
   width: 11.41rem;
   padding: 1.3rem auto;
@@ -90,12 +82,19 @@ h3 {
   margin-top: 2.8rem;
 }
 
-.jumbotron-fluid .container-fluid .btn:hover {
+.btn:hover {
   box-shadow: 0 0 12px rgba(0,0,0,0.9)
 }
 
-.jumbotron-fluid .container-fluid .btn:active {
+.btn:active {
   box-shadow: 0 0 0 rgba(0,0,0,0.5)
+}
+
+.relative-wrapper {
+  position: relative;
+  top: -16rem;
+  width: 100%;
+  text-align: center;
 }
 
 @media only screen and (max-width: 767px) {
@@ -106,6 +105,14 @@ h3 {
     font-size: 5.7rem;
   }
 }
+
+@media only screen and (max-width: 550px) {
+  .jumbotron-fluid .container-fluid h1 {
+    font-size: 4rem;
+  }
+}
+
+
 
 /* NOTE: Featured Project */
 
